@@ -8,3 +8,4 @@ Changes from 2.1.1 to 2.1.2
 - Removed useless Coordinate copies in OverlayOp::mergeZ() 
 - Avoided throws by IsValid on invalid input
 - Stricter C++ syntax (math.h=>cmath, ieeefp.h in "C" block)
+- Better support for older compilers (Polygonizer::LineStringAdder friendship)
